# Convo_connect

./: .gitignore  Convo_Connect.sln
Client/: CMakeLists.txt  ChatPanel.cpp  ChatPanel.h  Client.vcxproj  Client.vcxproj.filters  ContactListPanel.cpp  ContactListPanel.h  DataFetch.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  MessageBubble.cpp  MessageBubble.h  MessageFrame.cpp  MessageFrame.h  ProfileViewFrame.cpp  ProfileViewFrame.h  SignupFrame.cpp  SignupFrame.h  UserProfileDialog.cpp  UserProfileDialog.h  bufferedbitmap.h  client.cpp  client.h  main.cpp  main.h
Net/: Net.vcxproj  Net.vcxproj.filters  h_net.h  net.h  net_client.h  net_connection.h  net_msg.h  net_server.h  tsqueue.h
Server/: CMakeLists.txt  Convo_conn.db  Server.vcxproj  Server.vcxproj.filters  database.h  server.cpp
UI/: UI.vcxproj  UI.vcxproj.filters
